--- a/Test/Test.vcxproj
+++ b/Test/Test.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{70d96f16-3a97-4992-a701-dddaa73f48d2}</ProjectGuid>
-    <RootNamespace>Middleware1</RootNamespace>
+    <ProjectGuid>{81b036c3-92c5-430e-9926-9f739180752b}</ProjectGuid>
+    <RootNamespace>Test</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,18 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Application.h" />
-    <ClInclude Include="BaseObject.h" />
-    <ClInclude Include="IMemory.h" />
     <ClInclude Include="Main.h" />
-    <ClInclude Include="Memory.h" />
-    <ClInclude Include="Type.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Application.cpp" />
-    <ClCompile Include="BaseObject.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Memory.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
