--- a/MemoryManager_Even/MemoryManager_Even.vcxproj.filters
+++ b/MemoryManager_Even/MemoryManager_Even.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Object.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Page.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -39,6 +42,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Object.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Page.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
