--- a/MemoryManager_Even/MemoryManager_Even.vcxproj
+++ b/MemoryManager_Even/MemoryManager_Even.vcxproj
@@ -131,12 +131,14 @@
     <ClInclude Include="Main.h" />
     <ClInclude Include="MemoryManager.h" />
     <ClInclude Include="Object.h" />
+    <ClInclude Include="Page.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MemoryManager.cpp" />
     <ClCompile Include="Object.cpp" />
+    <ClCompile Include="Page.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
